--- a/alianzas.html
+++ b/alianzas.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="keywords" content="bonux alianzas financieras"/>
+    <meta name="description" content="nuestras aliados financieros"/>
     <link rel="shortcut icon" type="image/jpg" href="./img/bonuxico.jpg" />
-    <title>Bonux</title>
+    <title>Bonux | alianzas</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css" />
