--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="keywords" content="bonux financiera dinero prestamos creditos"/>
+    <meta name="description" content="somos tu aliado en servicios financieros "/>
     <link rel="shortcut icon" type="image/jpg" href="./img/bonuxico.jpg" />
-    <title>Bonux</title>
+    <title>Bonux | inicio</title>
     <!-- Bootstrap CSS -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
