acomodo de info y links

--- a/pagina/contacto.html
+++ b/pagina/contacto.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="keywords" content="bonux financiera dinero prestamos creditos"/>
-    <meta name="description" content="somos tu aliado en servicios financieros "/>
-    <link rel="shortcut icon" type="image/jpg" href="./img/bonuxico.jpg" />
-    <title>Bonux | inicio</title>
+    <meta name="keywords" content="bonux alianzas financieras" />
+    <meta name="description" content="nuestras aliados financieros" />
+    <link rel="shortcut icon" type="image/jpg" href="./../img/bonuxico.jpg" />
+    <title>Bonux | alianzas</title>
     <!-- Bootstrap CSS -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
@@ -15,7 +15,7 @@
       integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./../css/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -24,13 +24,13 @@
     />
   </head>
   <body>
-    <div class="contenedorIndex">
+    <div class="contenedor">
       <!-- header -->
 
       <nav class="header navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
-          <a class="navbar-brand" href="index.html"
-            ><img class="logoImg" src="./img/bonux2.png"
+          <a class="navbar-brand" href="./../index.html"
+            ><img class="logoImg" src="./../img/bonux2.png"
           /></a>
           <button
             class="navbar-toggler"
@@ -45,9 +45,9 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0 d-block d-md-none">
-              <li class="nav-item"><a class="" href="./index.html">Home</a></li>
+              <li class="nav-item"><a class="" href="./../index.html">Home</a></li>
               <li class="nav-item">
-                <a class="" href="./pagina/por-que-elegirnos.html"
+                <a class="" href="./por-que-elegirnos.html"
                   >Por que elegirnos?</a
                 >
               </li>
@@ -59,37 +59,37 @@
                   role="button"
                   data-bs-toggle="dropdown"
                   aria-expanded="false"
-                  href="./pagina/productos.html"
+                  href="./productos.html"
                   >Productos</a
                 >
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                   <li>
-                    <a class="dropdown-item" href="./pagina/productos.html#base"
+                    <a class="dropdown-item" href="productos.html#base"
                       >Base de datos</a
                     >
                   </li>
                   <li>
-                    <a class="dropdown-item" href="./pagina/productos.html#historial"
+                    <a class="dropdown-item" href="productos.html#historial"
                       >Historial crediticio</a
                     >
                   </li>
                   <li>
-                    <a class="dropdown-item" href="./pagina/productos.html#puntos"
+                    <a class="dropdown-item" href="productos.html#puntos"
                       >Fidelización de clientes</a
                     >
                   </li>
                   <li>
-                    <a class="dropdown-item" href="./pagina/productos.html#marca"
+                    <a class="dropdown-item" href="productos.html#marca"
                       >Reconocimiento de marca</a
                     >
                   </li>
                 </ul>
               </li>
               <li class="nav-item">
-                <a class="" href="./pagina/alianzas.html">Alianzas</a>
+                <a class="" href="./alianzas.html">Alianzas</a>
               </li>
               <li class="nav-item">
-                <a class="" href="./pagina/contacto.html">Contacto</a>
+                <a class="" href="./contacto.html">Contacto</a>
               </li>
             </ul>
             <div class="d-none d-md-block d-flex">
@@ -98,7 +98,7 @@
                   <a class="btnHeader" href="./index.html">Home</a>
                 </li>
                 <li class="nav-item">
-                  <a class="btnHeader" href="./pagina/por-que-elegirnos.html"
+                  <a class="btnHeader" href="./por-que-elegirnos.html"
                     >Por que elegirnos?</a
                   >
                 </li>
@@ -110,37 +110,37 @@
                     role="button"
                     data-bs-toggle="dropdown"
                     aria-expanded="false"
-                    href="./pagina/productos.html"
+                    href="./productos.html"
                     >Productos</a
                   >
                   <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                     <li>
-                      <a class="dropdown-item" href="./pagina/productos.html#base"
+                      <a class="dropdown-item" href="./productos.html#base"
                         >Base de datos</a
                       >
                     </li>
                     <li>
-                      <a class="dropdown-item" href="./pagina/productos.html#historial"
+                      <a class="dropdown-item" href="./productos.html#historial"
                         >Historial crediticio</a
                       >
                     </li>
                     <li>
-                      <a class="dropdown-item" href="./pagina/productos.html#puntos"
+                      <a class="dropdown-item" href="./productos.html#puntos"
                         >Fidelización de clientes</a
                       >
                     </li>
                     <li>
-                      <a class="dropdown-item" href="./pagina/productos.html#marca"
+                      <a class="dropdown-item" href="./productos.html#marca"
                         >Reconocimiento de marca</a
                       >
                     </li>
                   </ul>
                 </li>
                 <li class="nav-item">
-                  <a class="btnHeader" href="./pagina/alianzas.html">Alianzas</a>
+                  <a class="btnHeader" href="./alianzas.html">Alianzas</a>
                 </li>
                 <li class="nav-item">
-                  <a class="btnHeader" href="./pagina/contacto.html">Contacto</a>
+                  <a class="btnHeader" href="./contacto.html">Contacto</a>
                 </li>
               </ul>
             </div>
@@ -150,28 +150,95 @@
 
       <!--Contenido Principal-->
       <div class="container">
-        <div class="row">
-          <div class="col-xs-12">
-            <main class="main">
-              <div class="imgContenedor">
-                <div class="divCentrado">
-                  <p class="textoSobreImg">
-                    El servicio financiero que har&aacute; crecer tu negocio
-                  </p>
-                </div>
+        <img
+          class="btn-whatsapp"
+          src="https://clientes.dongee.com/whatsapp.png"
+          width="64"
+          height="64"
+          alt="Whatsapp"
+          onclick="window.location.href='https://wa.me/573001112233?text=Hola!%20Estoy%20interesado%20en%20tu%20servicio'"
+        />
 
-                <!-- imagen de bienvenida a la pagina-->
-                <img class="billetes" alt="billetes" src="./img/billetes.png" />
+        <main class="main">
+          <div class="row">
+            <div class="col-xs-12 col-md-6">
+              <div class="mainContain">
+                <h1 class="tituloContacto">Formulario</h1>
+                <!-- Formulario de contacto para obtener la informacion de potenciales clientes -->
+                <form method="" action="#" class="formulario">
+                  <label for="nombre">Nombre y apellido</label>
+                  <br />
+                  <input
+                    name="nombre"
+                    id="nombre"
+                    placeholder="nombre completo"
+                    type="text"
+                  />
+                  <br />
+                  <label for="empresa">Empresa</label>
+                  <br />
+                  <input
+                    name="empresa"
+                    id="empresa"
+                    placeholder="Empresa"
+                    type="text"
+                  />
+                  <br />
+                  <label for="direccion"
+                    >Direccion (provincia, partido, calle y numero)</label
+                  >
+                  <br />
+                  <input
+                    name="direccion"
+                    id="direccion"
+                    placeholder="provincia, partido, calle y numero"
+                    type="text"
+                  />
+                  <br />
+                  <label for="mail">Mail:</label>
+                  <br />
+                  <input
+                    name="mail"
+                    id="mail"
+                    placeholder="juanperez@gmail.com"
+                    required
+                    type="email"
+                  />
+                  <br />
+                  <label for="telefono" placeholder="telefono de contacto"
+                    >Telefono:</label
+                  >
+                  <br />
+                  <input name="telefono" id="telefono" type="number" />
+                  <br />
+                  <label for="comentario">Comentario:</label>
+                  <br />
+                  <textarea
+                    name="comentario"
+                    id="comentario"
+                    placeholder="dejanos tu comentario"
+                  ></textarea>
+                  <br />
+
+                  <input class="contactoSubmitBtn" type="submit" />
+                </form>
               </div>
-            </main>
+            </div>
+            <div class="col-xs-12 col-md-6">
+              <iframe
+                class="mapa"
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3270.3961106498728!2d-57.99700968518275!3d-34.94667938323125!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95a2e808b693bb11%3A0x57453946e12fe8b!2sAv.%2044%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1ses-419!2sar!4v1657044668645!5m2!1ses-419!2sar"
+                width="450"
+                height="450"
+                style="border: 0"
+                allowfullscreen=""
+                loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"
+              ></iframe>
+            </div>
           </div>
-        </div>
-    
-      <img class="btn-whatsapp" src="https://clientes.dongee.com/whatsapp.png" width="64" height="64" alt="Whatsapp" onclick="window.location.href='https://wa.me/573001112233?text=Hola!%20Estoy%20interesado%20en%20tu%20servicio'">
-
+        </main>
       </div>
-
-
       <!--footer-->
 
       <footer class="container-fluid">
@@ -180,26 +247,28 @@
             <ul class="f1">
               <li>
                 <u
-                  ><a class="btnFooter titfoot" href="./pagina/productos.html"
+                  ><a class="btnFooter titfoot" href="./productos.html"
                     >Productos:</a
                   ></u
                 >
               </li>
               <li>
-                <a class="btnFooter" href="./pagina/productos.html#base">Base de datos</a>
+                <a class="btnFooter" href="./productos.html#base"
+                  >Base de datos</a
+                >
               </li>
               <li>
-                <a class="btnFooter" href="./pagina/productos.html#historial"
+                <a class="btnFooter" href="./productos.html#historial"
                   >Historial crediticio</a
                 >
               </li>
               <li>
-                <a class="btnFooter" href="./pagina/productos.html#puntos"
+                <a class="btnFooter" href="./productos.html#puntos"
                   >Fidelizaci&oacute;n de clientes</a
                 >
               </li>
               <li>
-                <a class="btnFooter" href="./pagina/productos.html#marca"
+                <a class="btnFooter" href="./productos.html#marca"
                   >Reconocimiento de marca</a
                 >
               </li>
@@ -207,16 +276,16 @@
             <ul class="f2">
               <li><u class="titfoot">Nosotros:</u></li>
               <li>
-                <a class="btnFooter" href="./pagina/por-que-elegirnos.html"
+                <a class="btnFooter" href="./por-que-elegirnos.html"
                   >Por que elegirnos?</a
                 >
               </li>
-              <li><a class="btnFooter" href="./pagina/alianzas.html">Alianzas</a></li>
+              <li><a class="btnFooter" href="./alianzas.html">Alianzas</a></li>
             </ul>
             <ul class="f3">
               <li><u class="titfoot">Contacto:</u></li>
               <li>
-                <a class="btnFooter" href="./pagina/contacto.html">Formularios</a>
+                <a class="btnFooter" href="./contacto.html">Formularios</a>
               </li>
               <li>
                 tel: <a class="btnFooter" href="2215555555">2215555555</a>
@@ -231,14 +300,14 @@
                   ><img
                     class="logoRedes"
                     alt="logo facebook"
-                    src="./img/redes/facebook.png"
+                    src="./../img/redes/facebook.png"
                 /></a>
               </li>
               <li>
                 <img
                   class="logoRedes"
                   alt="logo instagram"
-                  src="./img/redes/instagram.png"
+                  src="./../img/redes/instagram.png"
                 />
               </li>
             </ul>
@@ -247,13 +316,13 @@
                 ><img
                   class="imgfoot"
                   alt="imagen usuarios financieros bcra"
-                  src="./img/bcra.jpg"
+                  src="./../img/bcra.jpg"
               /></a>
               <a href="https://serviciosweb.afip.gob.ar/"
                 ><img
                   alt="logo data fiscal"
                   class="imgFoot"
-                  src="./img/datafiscal.jpg"
+                  src="./../img/datafiscal.jpg"
               /></a>
             </ul>
           </div>
@@ -280,7 +349,7 @@
                       aria-controls="collapseOne"
                     >
                       <u
-                        ><a class="btnFooter titfoot" href="./pagina/productos.html"
+                        ><a class="btnFooter titfoot" href="./productos.html"
                           >Productos:</a
                         ></u
                       >
@@ -295,22 +364,22 @@
                     <div class="accordion-body">
                       <ul class="">
                         <li>
-                          <a class="btnFooter" href="./pagina/productos.html#base"
+                          <a class="btnFooter" href="./productos.html#base"
                             >Base de datos</a
                           >
                         </li>
                         <li>
-                          <a class="btnFooter" href="./pagina/productos.html#historial"
+                          <a class="btnFooter" href="./productos.html#historial"
                             >Historial crediticio</a
                           >
                         </li>
                         <li>
-                          <a class="btnFooter" href="./pagina/productos.html#puntos"
+                          <a class="btnFooter" href="./productos.html#puntos"
                             >Fidelizaci&oacute;n de clientes</a
                           >
                         </li>
                         <li>
-                          <a class="btnFooter" href="./pagina/productos.html#marca"
+                          <a class="btnFooter" href="./productos.html#marca"
                             >Reconocimiento de marca</a
                           >
                         </li>
@@ -330,7 +399,9 @@
                       aria-controls="collapseTwo"
                     >
                       <u
-                        ><a class="btnFooter titfoot" href="./pagina/por-que-elegirnos.html"
+                        ><a
+                          class="btnFooter titfoot"
+                          href="./por-que-elegirnos.html"
                           >Nosotros:</a
                         ></u
                       >
@@ -345,12 +416,12 @@
                     <div class="accordion-body">
                       <ul class="">
                         <li>
-                          <a class="btnFooter" href="./pagina/por-que-elegirnos.html"
+                          <a class="btnFooter" href="./por-que-elegirnos.html"
                             >Por que elegirnos?</a
                           >
                         </li>
                         <li>
-                          <a class="btnFooter" href="./pagina/alianzas.html"
+                          <a class="btnFooter" href="./alianzas.html"
                             >Alianzas</a
                           >
                         </li>
@@ -385,7 +456,7 @@
                     <div class="accordion-body">
                       <ul>
                         <li>
-                          <a class="btnFooter" href="./pagina/contacto.html"
+                          <a class="btnFooter" href="./contacto.html"
                             >Formularios</a
                           >
                         </li>
@@ -408,11 +479,7 @@
                       aria-expanded="false"
                       aria-controls="collapseFour"
                     >
-                      <u
-                        ><li class="btnFooter titfoot" 
-                          >Redes:</li
-                        ></u
-                      >
+                      <u><li class="btnFooter titfoot">Redes:</li></u>
                     </button>
                   </h2>
                   <div
@@ -428,14 +495,14 @@
                             ><img
                               class="logoRedes"
                               alt="logo facebook"
-                              src="./img/redes/facebook.png"
+                              src="./../img/redes/facebook.png"
                           /></a>
                         </li>
                         <li>
                           <img
                             class="logoRedes"
                             alt="logo instagram"
-                            src="./img/redes/instagram.png"
+                            src="./../img/redes/instagram.png"
                           />
                         </li>
                       </ul>
@@ -452,13 +519,13 @@
                   ><img
                     class="imgfoot"
                     alt="imagen usuarios financieros bcra"
-                    src="./img/bcra.jpg"
+                    src="./../img/bcra.jpg"
                 /></a>
                 <a href="https://serviciosweb.afip.gob.ar/"
                   ><img
                     alt="logo data fiscal"
                     class="imgFoot"
-                    src="./img/datafiscal.jpg"
+                    src="./../img/datafiscal.jpg"
                 /></a>
               </ul>
             </div>
