--- a/index.html
+++ b/index.html
@@ -4,8 +4,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="keywords" content="bonux financiera dinero prestamos creditos"/>
-    <meta name="description" content="somos tu aliado en servicios financieros "/>
+    <meta
+      name="keywords"
+      content="bonux financiera dinero prestamos creditos"
+    />
+    <meta
+      name="description"
+      content="somos tu aliado en servicios financieros "
+    />
     <link rel="shortcut icon" type="image/jpg" href="./img/bonuxico.jpg" />
     <title>Bonux | inicio</title>
     <!-- Bootstrap CSS -->
@@ -69,17 +75,23 @@
                     >
                   </li>
                   <li>
-                    <a class="dropdown-item" href="./pagina/productos.html#historial"
+                    <a
+                      class="dropdown-item"
+                      href="./pagina/productos.html#historial"
                       >Historial crediticio</a
                     >
                   </li>
                   <li>
-                    <a class="dropdown-item" href="./pagina/productos.html#puntos"
+                    <a
+                      class="dropdown-item"
+                      href="./pagina/productos.html#puntos"
                       >Fidelización de clientes</a
                     >
                   </li>
                   <li>
-                    <a class="dropdown-item" href="./pagina/productos.html#marca"
+                    <a
+                      class="dropdown-item"
+                      href="./pagina/productos.html#marca"
                       >Reconocimiento de marca</a
                     >
                   </li>
@@ -115,32 +127,44 @@
                   >
                   <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                     <li>
-                      <a class="dropdown-item" href="./pagina/productos.html#base"
+                      <a
+                        class="dropdown-item"
+                        href="./pagina/productos.html#base"
                         >Base de datos</a
                       >
                     </li>
                     <li>
-                      <a class="dropdown-item" href="./pagina/productos.html#historial"
+                      <a
+                        class="dropdown-item"
+                        href="./pagina/productos.html#historial"
                         >Historial crediticio</a
                       >
                     </li>
                     <li>
-                      <a class="dropdown-item" href="./pagina/productos.html#puntos"
+                      <a
+                        class="dropdown-item"
+                        href="./pagina/productos.html#puntos"
                         >Fidelización de clientes</a
                       >
                     </li>
                     <li>
-                      <a class="dropdown-item" href="./pagina/productos.html#marca"
+                      <a
+                        class="dropdown-item"
+                        href="./pagina/productos.html#marca"
                         >Reconocimiento de marca</a
                       >
                     </li>
                   </ul>
                 </li>
                 <li class="nav-item">
-                  <a class="btnHeader" href="./pagina/alianzas.html">Alianzas</a>
+                  <a class="btnHeader" href="./pagina/alianzas.html"
+                    >Alianzas</a
+                  >
                 </li>
                 <li class="nav-item">
-                  <a class="btnHeader" href="./pagina/contacto.html">Contacto</a>
+                  <a class="btnHeader" href="./pagina/contacto.html"
+                    >Contacto</a
+                  >
                 </li>
               </ul>
             </div>
@@ -166,11 +190,16 @@
             </main>
           </div>
         </div>
-    
-      <img class="btn-whatsapp" src="https://clientes.dongee.com/whatsapp.png" width="64" height="64" alt="Whatsapp" onclick="window.location.href='https://wa.me/542215555555?text=Hola!%20Estoy%20interesado%20en%20tu%20servicio'">
 
+        <img
+          class="btn-whatsapp"
+          src="https://clientes.dongee.com/whatsapp.png"
+          width="64"
+          height="64"
+          alt="Whatsapp"
+          onclick="window.location.href='https://wa.me/542215555555?text=Hola!%20Estoy%20interesado%20en%20tu%20servicio'"
+        />
       </div>
-
 
       <!--footer-->
 
@@ -186,7 +215,9 @@
                 >
               </li>
               <li>
-                <a class="btnFooter" href="./pagina/productos.html#base">Base de datos</a>
+                <a class="btnFooter" href="./pagina/productos.html#base"
+                  >Base de datos</a
+                >
               </li>
               <li>
                 <a class="btnFooter" href="./pagina/productos.html#historial"
@@ -211,12 +242,16 @@
                   >Por que elegirnos?</a
                 >
               </li>
-              <li><a class="btnFooter" href="./pagina/alianzas.html">Alianzas</a></li>
+              <li>
+                <a class="btnFooter" href="./pagina/alianzas.html">Alianzas</a>
+              </li>
             </ul>
             <ul class="f3">
               <li><u class="titfoot">Contacto:</u></li>
               <li>
-                <a class="btnFooter" href="./pagina/contacto.html">Formularios</a>
+                <a class="btnFooter" href="./pagina/contacto.html"
+                  >Formularios</a
+                >
               </li>
               <li>
                 tel: <a class="btnFooter" href="2215555555">2215555555</a>
@@ -280,7 +315,9 @@
                       aria-controls="collapseOne"
                     >
                       <u
-                        ><a class="btnFooter titfoot" href="./pagina/productos.html"
+                        ><a
+                          class="btnFooter titfoot"
+                          href="./pagina/productos.html"
                           >Productos:</a
                         ></u
                       >
@@ -295,22 +332,30 @@
                     <div class="accordion-body">
                       <ul class="">
                         <li>
-                          <a class="btnFooter" href="./pagina/productos.html#base"
+                          <a
+                            class="btnFooter"
+                            href="./pagina/productos.html#base"
                             >Base de datos</a
                           >
                         </li>
                         <li>
-                          <a class="btnFooter" href="./pagina/productos.html#historial"
+                          <a
+                            class="btnFooter"
+                            href="./pagina/productos.html#historial"
                             >Historial crediticio</a
                           >
                         </li>
                         <li>
-                          <a class="btnFooter" href="./pagina/productos.html#puntos"
+                          <a
+                            class="btnFooter"
+                            href="./pagina/productos.html#puntos"
                             >Fidelizaci&oacute;n de clientes</a
                           >
                         </li>
                         <li>
-                          <a class="btnFooter" href="./pagina/productos.html#marca"
+                          <a
+                            class="btnFooter"
+                            href="./pagina/productos.html#marca"
                             >Reconocimiento de marca</a
                           >
                         </li>
@@ -330,7 +375,9 @@
                       aria-controls="collapseTwo"
                     >
                       <u
-                        ><a class="btnFooter titfoot" href="./pagina/por-que-elegirnos.html"
+                        ><a
+                          class="btnFooter titfoot"
+                          href="./pagina/por-que-elegirnos.html"
                           >Nosotros:</a
                         ></u
                       >
@@ -345,7 +392,9 @@
                     <div class="accordion-body">
                       <ul class="">
                         <li>
-                          <a class="btnFooter" href="./pagina/por-que-elegirnos.html"
+                          <a
+                            class="btnFooter"
+                            href="./pagina/por-que-elegirnos.html"
                             >Por que elegirnos?</a
                           >
                         </li>
@@ -408,11 +457,7 @@
                       aria-expanded="false"
                       aria-controls="collapseFour"
                     >
-                      <u
-                        ><li class="btnFooter titfoot" 
-                          >Redes:</li
-                        ></u
-                      >
+                      <u><li class="btnFooter titfoot">Redes:</li></u>
                     </button>
                   </h2>
                   <div
