--- a/pagina/productos.html
+++ b/pagina/productos.html
@@ -45,7 +45,9 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0 d-block d-md-none">
-              <li class="nav-item"><a class="" href="./../index.html">Home</a></li>
+              <li class="nav-item">
+                <a class="" href="./../index.html">Home</a>
+              </li>
               <li class="nav-item">
                 <a class="" href="./por-que-elegirnos.html"
                   >Por que elegirnos?</a
