--- a/pagina/productos.html
+++ b/pagina/productos.html
@@ -97,7 +97,7 @@
             <div class="d-none d-md-block d-flex">
               <ul class="menu">
                 <li class="nav-item">
-                  <a class="btnHeader" href="./index.html">Home</a>
+                  <a class="btnHeader" href="./../index.html">Home</a>
                 </li>
                 <li class="nav-item">
                   <a class="btnHeader" href="./por-que-elegirnos.html"
